k8s/config/domain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-deployment
  labels:
    app: domain
spec:
  replicas: 4
  selector:
    matchLabels:
      app: domain
  template:
    metadata:
      labels:
        app: domain
    spec:
      containers:
        - name: domain
          image: domain:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
