k8s/config/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-app-deployment
  labels:
    app: delivery
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery-app
          image: delivery:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-app-service
  labels:
    app: delivery-app-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
