k8s/config/nats-box-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-box-deployment
  labels:
    app: nats-box
spec:
  selector:
    matchLabels:
      app: nats-box
  template:
    metadata:
      labels:
        app: nats-box
    spec:
      containers:
        - name: nats-box
          image: natsio/nats-box:0.14.5
          ports:
            - containerPort: 8222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-box-service
spec:
  selector:
    app: nats-box
  ports:
    - protocol: TCP
      port: 8222
      targetPort: 8222
      nodePort: 31002
  type: NodePort
