k8s/config/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
  labels:
    app: nats
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10.22-alpine3.20
          ports:
            - containerPort: 4222
            - containerPort: 8222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-nodeport-service
spec:
  type: NodePort
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 8222
      targetPort: 8222
      nodePort: 30003
---
apiVersion: v1
kind: Service
metadata:
  name: nats-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
